Добавила решение ЛР3